--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>Speech color changer</h1>
     <p>Tap/click then say a color to change the background color of the app.</p>
     <div>
-    <p class="output"><em>...diagnostic messages</em></p>
-</div>
+      <p class="output"><em>...diagnostic messages</em></p>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
